# memflow-registry

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.github/workflows/: build.yml  deploy.yml
assets/: README.md
examples/: sign_file.rs
memflow-registry/: Cargo.toml
memflow-registry-client/: Cargo.toml
memflow-registry-client/src/: lib.rs
memflow-registry-shared/: Cargo.toml
memflow-registry-shared/src/: error.rs  lib.rs  pki.rs  plugin_analyzer.rs  plugin_uri.rs  structs.rs
memflow-registry/src/: main.rs
memflow-registry/src/storage/: database.rs  mod.rs
src/: client.rs  default_registry.rs  error.rs  lib.rs  main.rs  pki.rs  plugin_uri.rs  storage.rs
src/rest/: middlewares.rs  mod.rs  models.rs  routes.rs
src/storage/: database.rs  mod.rs  plugin_analyzer.rs
