[package]
name = "memflow-registry"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2021"
description = "docker-like registry server for memflow plugins"
documentation = "https://docs.rs/memflow-registry"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-registry"
license = "MIT"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "memory-management", "os" ]
rust-version = "1.74.0"

[dependencies]
# general
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
dotenv = "0.15"

# axum
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
bytes = "1.7"

# plugin analysis
memflow = ">=0.2.3"

# plugin storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# signatures
k256 = { version = "0.13", features = ["serde", "pem"] }

# client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }

[dev-dependencies]
# unit testing
tempfile = "3.10"
tower = "0.5"
