[package]
name = "memflow-registry-client"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2021"
license = "MIT"
rust-version = "1.70.0"

[dependencies]
# shared functionality (plugin analyzer, pki, errors, etc.)
memflow-registry-shared = { path = "../memflow-registry-shared" }

# client
log = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
