[package]
name = "memflow-registry-shared"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2021"
license = "MIT"
rust-version = "1.70.0"

[dependencies]
# axum
log = "0.4"
thiserror = "1.0"

# parse plugins that are being uploaded
serde = { version = "1.0", features = ["derive"] }
goblin = "0.8"
dataview = "1.0"
num-traits = "0.2"
constcat = "0.5"

# plugin storage
sha256 = "1.5"
chrono = { version = "0.4", features = ["serde"] }

# signatures
k256 = { version = "0.13", features = ["serde", "pem"] }
